--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=batch2
 server.port=80
 
-aws.access-key-id=YOUR_ACCESS_KEY_ID
-aws.secret-access-key=YOUR_SECRET_ACCESS_KEY
 aws.region=ap-south-1
 aws.s3.bucket-name=batch2-kikitha-2025
+aws.profile.name=default
